patient info and update

--- a/vet-diagnostic-system-angular/src/app/vet/show-all-patients/show-all-patients.component.html
+++ b/vet-diagnostic-system-angular/src/app/vet/show-all-patients/show-all-patients.component.html
@@ -13,6 +13,7 @@
       <td>{{patient.recordNumber}}</td>
       <td>{{patient.name}}</td>
       <td>{{patient.breed}}</td>
+      <td><button (click)="patientInfoClicked(patient.recordNumber)">Info</button></td>
     </tr>
     </tbody>
   </table>
