--- a/vet-diagnostic-system-angular/src/app/vet/show-all-patients/show-all-patients.component.html
+++ b/vet-diagnostic-system-angular/src/app/vet/show-all-patients/show-all-patients.component.html
@@ -1,19 +1,25 @@
-<div>
 
-  <table>
+<div id="patients" class="list">
+  <h5>Patients</h5>
+  <table id="patientsTable" class="table table-hover">
     <thead>
     <tr>
       <th>Record Number</th>
       <th>Name</th>
       <th>Breed</th>
+      <th>Owner</th>
+      <th></th>
+      <th></th>
     </tr>
     </thead>
     <tbody>
-    <tr *ngFor="let patient of patients">
+    <tr id="tr1" class="trclick" *ngFor="let patient of patients">
       <td>{{patient.recordNumber}}</td>
       <td>{{patient.name}}</td>
       <td>{{patient.breed}}</td>
-      <td><button (click)="patientInfoClicked(patient.recordNumber)">Info</button></td>
+      <td>{{patient.owner.firstName}} {{patient.owner.lastName}}</td>
+      <td><button class="btn badge-info" (click)="patientInfoClicked(patient.recordNumber)">Info</button></td>
+      <td><button class="btn btn-danger" (click)="patientDeleteClicked(patient.id)">Delete</button></td>
     </tr>
     </tbody>
   </table>
