Show search result;model;some fixes

--- a/vet-diagnostic-system-angular/src/app/log-in/log-in/log-in.component.html
+++ b/vet-diagnostic-system-angular/src/app/log-in/log-in/log-in.component.html
@@ -1,3 +1,4 @@
+<p-toast position="top-right"></p-toast>
 <div class="container">
 	<div class="row">
 		<div class="col-lg-8 mx-auto">
@@ -23,9 +24,6 @@
 						<button class="btn btn-primary btn-xl" (click)="login()" type="submit" id="sendMessageButton">Log in</button> 
 					</div>
 				</div>
-				<br>
-				<div *ngIf="error" class="error">{{error}}</div>
-				<br>
 			</form>
 		</div>
 	</div>
