--- a/vet-diagnostic-system-angular/src/app/vet/search/search-home/search-home.component.html
+++ b/vet-diagnostic-system-angular/src/app/vet/search/search-home/search-home.component.html
@@ -1,3 +1,4 @@
+<p-toast position="top-right"></p-toast>
 <div class="container">
     <p-accordion>
         <p-accordionTab header="Search disease by symptoms">
@@ -8,7 +9,7 @@
                         <p-multiSelect [options]="selectSymptoms" [(ngModel)]="selectedSymptoms" name="selectedSymptoms"></p-multiSelect>            
                     </div>
                     <div id="right">
-                        <button class="btn btn-primary" type="submit" id="sendMessageButton">Search</button> 
+                        <button class="btn btn-primary" type="submit" id="sendMessageButton" (click)="search()">Search</button> 
                     </div>
                 </form>
             </div>
