--- a/vet-diagnostic-system-angular/src/app/vet/add-patient-form/add-patient-form.component.html
+++ b/vet-diagnostic-system-angular/src/app/vet/add-patient-form/add-patient-form.component.html
@@ -1,5 +1,5 @@
 
-<div id="patient-add-form">
+<div id="patient-add-form" class="container">
   <h5>Patient Info</h5>
   <form name="patientForm" (ngSubmit)="submitChanges()" #patientForm="ngForm">
 
