--- a/vet-diagnostic-system-angular/src/app/vet/home-page/home-page.component.html
+++ b/vet-diagnostic-system-angular/src/app/vet/home-page/home-page.component.html
@@ -13,6 +13,7 @@
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="vet/home/add-patient">Add patient</a></li>
                     <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="vet/home/search">Search</a></li>
+                    <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="vet/home/diagnose">Diagnose</a></li>
                     <li class="nav-item mx-0 mx-lg-1"><p class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger">|</p></li>
                     <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger"  (click)="logout()">Log out</a></li>
                 </ul>
