--- a/vet-diagnostic-system-angular/src/app/vet/show-all-patients/show-all-patients.component.html
+++ b/vet-diagnostic-system-angular/src/app/vet/show-all-patients/show-all-patients.component.html
@@ -13,7 +13,7 @@
     </tr>
     </thead>
     <tbody>
-    <tr id="tr1" class="trclick" *ngFor="let patient of patients">
+    <tr id="tr1" *ngFor="let patient of patients">
       <td>{{patient.recordNumber}}</td>
       <td>{{patient.name}}</td>
       <td>{{patient.breed}}</td>
