diagnose relation problems fix, diagnose-info added

--- a/vet-diagnostic-system-angular/src/app/vet/diagnose/diagnose.component.html
+++ b/vet-diagnostic-system-angular/src/app/vet/diagnose/diagnose.component.html
@@ -75,7 +75,7 @@
     </tbody>
   </table>
 
-  <button class="btn-success" (click)="confirmDiagnose()">Confirm diagnose</button>
+  <button class="btn btn-success" (click)="confirmDiagnose()">Confirm diagnose</button>
 </div>
 
 
