--- a/vet-diagnostic-system-angular/src/app/vet/search/show-diseases/show-diseases.component.html
+++ b/vet-diagnostic-system-angular/src/app/vet/search/show-diseases/show-diseases.component.html
@@ -5,12 +5,14 @@
             <tr>
                 <th>Disease name</th>
                 <th>Disease category</th>
+                <th></th>
             </tr>
         </ng-template>
         <ng-template pTemplate="body" let-d>
             <tr>
                 <td>{{d.name}}</td>
                 <td>{{d.diseaseCategory}}</td>
+                <td><button class="btn badge-info" (click)="diseaseInfo(d.name)">Info</button></td>
             </tr>
         </ng-template>
     </p-table>
