vaccinations changes and added to front

--- a/vet-diagnostic-system-angular/src/app/vet/diagnose-info/diagnose-info.component.html
+++ b/vet-diagnostic-system-angular/src/app/vet/diagnose-info/diagnose-info.component.html
@@ -118,6 +118,23 @@
 
   </div>
 
+  <div class="container">
+
+    <table class="table table-light">
+      <thead>
+      <th></th>
+      <th></th>
+      </thead>
+      <tbody>
+      <tr>
+        <td><b>Date</b></td>
+        <td>{{diagnose.date}}</td>
+      </tr>
+      </tbody>
+    </table>
+
+  </div>
+
   <div>
     <button class="btn btn-danger" (click)="delete()">Delete</button>
   </div>
