--- a/vet-diagnostic-system-angular/src/app/vet/home-page/home-page.component.html
+++ b/vet-diagnostic-system-angular/src/app/vet/home-page/home-page.component.html
@@ -23,5 +23,6 @@
     </nav>
     <div style="margin-top: 150px;">
         <router-outlet></router-outlet>
+        <p-toast position="top-right"></p-toast>
     </div>
 </div>
