--- a/vet-diagnostic-system-angular/src/app/admin/create-new-admin/create-new-admin.component.html
+++ b/vet-diagnostic-system-angular/src/app/admin/create-new-admin/create-new-admin.component.html
@@ -1,1 +1,42 @@
-<p>create-new-admin works!</p>
+
+<div id="admin-add-form" class="container">
+    <h5>Admin Info</h5>
+    <form name="adminForm" (ngSubmit)="submitChanges()" #adminForm="ngForm">
+
+        <div class="form-group">
+            <label for="username"><b>Username</b></label>
+            <input type="text"  class="form-control" id="username"
+                   required
+                   [(ngModel)]="admin.username" name="username"
+                   #username="ngModel"
+            />
+          </div>
+  
+      <div class="form-group">
+        <label for="firstName"><b>First name</b></label>
+        <input type="text"  class="form-control" id="firstName"
+               required
+               [(ngModel)]="admin.firstName" name="firstName"
+               #firstName="ngModel"
+        />
+      </div>
+
+      <div class="form-group">
+        <label for="lastName"><b>Last name</b></label>
+        <input type="text"  class="form-control" id="lastName"
+               required
+               [(ngModel)]="admin.lastName" name="lastName"
+               #lastName="ngModel"
+        />
+      </div>
+  
+      <br/><br/>
+  
+      <div class="form-group">
+        <button type="submit" class="btn btn-success">Confirm</button>
+      </div>
+    </form>
+  </div>
+  
+  
+  
