--- a/vet-diagnostic-system-angular/src/app/vet/add-patient-form/add-patient-form.component.html
+++ b/vet-diagnostic-system-angular/src/app/vet/add-patient-form/add-patient-form.component.html
@@ -72,6 +72,20 @@
 
     <h6>Owner info</h6>
 
+
+    <div>
+      <label for="owners"><b>Owners</b></label>
+      <ng-multiselect-dropdown id="owners" name="owners"
+                               [placeholder]="'Select owner'"
+                               [data]="allOwners"
+                               [(ngModel)]="selectedOwner"
+                               [settings]="ownerDropDownSettings"
+                               #owners="ngModel"
+                               (onSelect)="loadOwnerFields()"
+      >
+      </ng-multiselect-dropdown>
+    </div>
+
     <div class="form-group">
       <label for="firstName"><b>First name</b></label>
       <input type="text" class="form-control"  id="firstName"
