--- a/vet-diagnostic-system-angular/src/app/admin/home-page/home-page.component.html
+++ b/vet-diagnostic-system-angular/src/app/admin/home-page/home-page.component.html
@@ -16,6 +16,7 @@
                     <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="admin/home/show-all-medicines">Medicines</a></li>
                     <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="admin/home/show-all-diseases">Diseases</a></li>
                     <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="admin/home/show-all-vaccines">Vaccines</a></li>
+                    <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="admin/home/input-rules">Custom rules</a></li>
                     <li class="nav-item mx-0 mx-lg-1"><p class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger">|</p></li>
                     <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger"  (click)="logout()">Log out</a></li>
                 </ul>
